Site mostly done

--- a/sass/abstracts/variables/_colors.scss
+++ b/sass/abstracts/variables/_colors.scss
@@ -1,20 +1,21 @@
-$color__background-body: #fff;
-$color__background-screen: #f1f1f1;
-$color__background-hr: #ccc;
-$color__background-button: #e6e6e6;
-$color__background-pre: #eee;
-$color__background-ins: #fff9c0;
+$white: #fff;
+$grey: #F2F2F2;
+$body: #1f1f1f;
+$green: #2FAC66;
+$lime: #95C11F;
+$toothpaste:#71C5A2;
+$blue: #0046CD;
+$sky: #009FE3;
+$yellow: #FFB501;
+$gold: #F39100;
+$orange: #EE5A35;
+$wheat: #FFC672;
+$orange: #EE5A35;
+$magenta: #E5007D;
+$violet: #662480;
+$purple: #951B8A;
+$red: #BE1622;
+$pink:#F381BE;
+$beige: #cbbcac;
 
-$color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
-$color__link: #4169e1; //royalblue
-$color__link-visited: #800080; //purple
-$color__link-hover: #191970; //midnightblue
-$color__text-main: #404040;
 
-$color__border-button: #ccc #ccc #bbb;
-$color__border-button-hover: #ccc #bbb #aaa;
-$color__border-button-focus: #aaa #bbb #bbb;
-$color__border-input: #ccc;
-$color__border-abbr: #666;
