--- a/sass/abstracts/mixins/_mixins.scss
+++ b/sass/abstracts/mixins/_mixins.scss
@@ -9,3 +9,49 @@
 @mixin column-width($numberColumns: 3) {
 	width: map-get($columns, $numberColumns) - ( ( $columns__margin * ( $numberColumns - 1 ) ) / $numberColumns );
 }
+
+
+@mixin add_color($bg,$fg){
+	background-color:$bg;
+	color:$fg;
+	transition:background-color 400ms ease, color 200ms ease;
+	&:hover{
+		background-color:$fg;
+		color:$bg;
+	}
+}
+
+@mixin add_poly($points...){
+	clip-path:polygon( $points );
+}
+
+@mixin media700{
+    @media screen and (min-width:700px){@content;}
+}
+@mixin media1000{
+    @media screen and (min-width:1000px){@content;}
+}
+@mixin media1200{
+    @media screen and (min-width:1200px){@content;}
+}
+
+@mixin media1800{
+    @media screen and (min-width:1800px){@content;}
+}
+
+@mixin proportional-container($ratio){
+	position: relative;
+	width:100%;
+	height:0;
+	overflow: hidden;
+	padding-top:$ratio;
+}
+
+@mixin proportional-image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
