--- a/sass/base/typography/_typography.scss
+++ b/sass/base/typography/_typography.scss
@@ -4,10 +4,10 @@ input,
 select,
 optgroup,
 textarea {
-	color: $color__text-main;
-	font-family: $font__main;
+	color: $body;
+	font-family: $font;
 	font-size: 1rem;
-	line-height: $font__line-height-body;
+	line-height: 150%;
 }
 
 h1,
@@ -20,8 +20,11 @@ h6 {
 }
 
 p {
-	margin-bottom: 1.5em;
+	margin-top:0;
+	margin-bottom: 1.5rem;
 }
+
+
 
 dfn,
 cite,
@@ -31,15 +34,14 @@ i {
 }
 
 blockquote {
-	margin: 0 1.5em;
+	margin: 0 1.5rem;
 }
 
 address {
-	margin: 0 0 1.5em;
+	font-style: normal;
 }
 
 pre {
-	background: $color__background-pre;
 	font-family: $font__pre;
 	line-height: $font__line-height-pre;
 	margin-bottom: 1.6em;
@@ -57,16 +59,63 @@ var {
 
 abbr,
 acronym {
-	border-bottom: 1px dotted $color__border-abbr;
+	border-bottom: 1px dotted $orange;
 	cursor: help;
 }
 
 mark,
 ins {
-	background: $color__background-ins;
 	text-decoration: none;
 }
 
 big {
 	font-size: 125%;
+}
+
+h1{
+	font-size:2rem;
+	font-weight:700;
+	margin:0 0 1em;
+}
+
+h2{
+	font-size:1.4rem;
+	font-weight:700;
+	margin:0 0 1em;
+}
+
+h3 {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin: 0 0 1em;
+    line-height: 130%;
+}
+
+h4{
+	font-size:1rem;
+	font-weight:600;
+	margin:0 0 1em;
+	line-height: 130%;
+}
+
+h5 {
+	margin:0 0 1em;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.date{
+	font-weight:600;
+}
+
+@include media1200{
+	h1{
+		font-size:3rem;
+	}
+	h2{
+		font-size:2.4rem;
+	}
+	h3{
+		font-size:1.4rem;
+	}
 }
