--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -1,9 +1,89 @@
+#masthead {
+	height:var(--header-height);
+	position: absolute;
+	width: 100%;
+	max-width:100vw;
+	top: 0;
+	z-index:20;
+	.header-container{
+		@include add_poly(0% 0%,100% 0%, 100% 70%, 0% 100%);
+		background-color:$white;
+		width:100%;
+		height:100%;
+	}
+}
+
+.home{
+	#masthead{
+		.header-container{
+			background-color:transparent;
+			svg {
+				fill: white;
+			}
+			.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after{
+				background-color:$white;
+			}
+			.is-active{
+				.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after{
+					background-color:$body;
+				}
+			}
+		}
+		&.slideOut{
+			.header-container{
+				background-color: $white;			
+				svg {
+					fill: $body;
+				}
+				.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after{
+					background-color:$body;
+				}
+			}
+		}
+	}
+}
+
+#masthead{
+	svg {
+		fill: $body;
+		max-height: var(--header-height);
+	}
+}
+
+.scroll_lock .home #masthead .header-container svg{
+	fill:$body;
+}
+
+.site-branding {
+	max-height: var(--header-height);
+	text-align: left;
+}
+
+header#masthead{
+	&.addFixed{
+		position:fixed;
+		transform: translate3d(0, -100%, 0);
+	}
+	&.slideOut{
+		transition: transform 600ms ease-in;
+		transform: translate3d(0, -100%, 0);
+		position: fixed;
+		&.slideInDown{
+			transform: translate3d(0,0,0);
+			position:fixed;
+		}
+	}
+}
+
+#primary{
+	padding-top:var(--header-height);
+}
+
 .main-navigation {
 	display: block;
 	width: 100%;
 
 	ul {
-		display: none;
 		list-style: none;
 		margin: 0;
 		padding-left: 0;
@@ -51,10 +131,9 @@
 
 	li {
 		position: relative;
-
-		&:hover > a,
-		&.focus > a {
-		}
+		font-size: 1.4rem;
+		font-weight: 600;
+		margin-bottom: 0.5rem;
 	}
 
 	a {
@@ -62,48 +141,262 @@
 		text-decoration: none;
 	}
 
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a,
-	.current-menu-ancestor > a {
+}
+
+#site-navigation, .modal {
+    position: fixed;
+    width: 100%;
+	max-width:100vw;
+    left: 0;
+    top: 0;
+    height: 100%;
+	min-height:100vh;
+    z-index: -1;
+    transform: translate3d(-100%,0,0);
+    transition: transform 800ms ease-in;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#site-navigation{
+	background-color: $white;
+	padding: var(--header-height) var(--margin);
+}
+.modal{
+	z-index:10;
+	flex-direction: column;
+	&.toggled{
+		transform: translate3d(0, 0, 0);
 	}
 }
 
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-	display: block;
+.toggled {
+	&#site-navigation {
+		transform: translate3d(0, 0, 0);
+	}
+
 }
 
-@media screen and (min-width: 37.5em) {
 
-	.menu-toggle {
+@include media1200{
+	#site-navigation {
+		position: absolute;
+		transform: translate(0,0);
+		height: var(--header-height);
+		min-height: unset;
+		padding: 1rem var(--margin) 1rem 1rem;
+		background-color: transparent;
+		width: auto;
+		right:0;
+		left:unset;
+		z-index:10;
+	}
+	
+	.main-navigation {
+		ul {
+			display: flex;
+		}
+		li {
+			margin-left: 1rem;
+			font-size: 1.2rem;
+			a {
+				color: $body;
+			}
+		}
+	}
+	.home .main-navigation li a{
+		color:$white;
+	}
+
+	.home .slideOut .main-navigation li a{
+		color:$body;
+		transition:color var(--transition) ease;
+		&:hover {
+			color: $red;
+		}
+	}
+	.main-navigation li a{
+		transition:color var(--transition) ease;
+		&:hover {
+			color: $red;
+		}
+	}
+}
+#hamburger {
+    position: absolute;
+    right: 1rem;
+    top: 0;
+	height:33px;
+}
+
+
+.hamburger {
+	padding: 5px;
+	display: inline-block;
+	cursor: pointer;
+	transition-property: opacity, filter;
+	transition-duration: calc(var(--transition) / 2);
+	transition-timing-function: linear;
+	font: inherit;
+	color: inherit;
+	text-transform: none;
+	background-color: transparent;
+	border: 0;
+	margin: 0;
+	overflow: visible; 
+}
+
+.hamburger:hover {
+	opacity: 0.8;
+}
+
+.hamburger.is-active:hover {
+	opacity: 0.8; 
+}
+
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+	background-color: #000; 
+}
+
+.hamburger-box {
+	width: 40px;
+	height: 30px;
+	display: inline-block;
+	position: relative; 
+} 
+
+.hamburger-inner {
+	display: block;
+	top: 50%;
+	margin-top: -2px; 
+}
+
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+	width: 40px;
+	height: 3px;
+	background-color: $body;
+	position: absolute;
+	transition-property: transform;
+	transition-duration: calc(var(--transition) / 2);
+	transition-timing-function: ease; 
+
+}
+
+
+.hamburger-inner::before, .hamburger-inner::after {
+	content: "";
+	display: block; 
+}
+
+
+
+.hamburger-inner::before {
+	top: -18px; 
+}
+
+
+
+.hamburger-inner::after {
+	top: -9px; 
+}
+
+ 
+
+/*
+
+* Hamburger Collapse
+
+*/
+
+.hamburger--collapse .hamburger-inner {
+	top: auto;
+	bottom: 0;
+	transition-duration: calc(var(--transition) / 2.2);
+	transition-duration: calc(var(--transition) / 2.2);
+	transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19); 
+}
+
+.hamburger--collapse .hamburger-inner::after {
+	top: -9px;
+	width: 85%;
+    left: 0;
+	transition: top 0.2s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), opacity 0.1s linear; 
+}
+
+.hamburger--collapse .hamburger-inner::before {
+	transition: top 0.12s 0.2s cubic-bezier(0.33333, 0.66667, 0.66667, 1), transform 0.13s cubic-bezier(0.55, 0.055, 0.675, 0.19); 
+}
+
+.hamburger--collapse.is-active .hamburger-inner {
+	transform: translate3d(0, -4px, 0) rotate(-30deg);
+	transition-duration: calc(var(--transition) / 1.8);
+	transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1); 
+}
+
+.hamburger--collapse.is-active .hamburger-inner::after {
+	top: 0;
+	opacity: 0;
+	transition: top 0.2s cubic-bezier(0.33333, 0, 0.66667, 0.33333), opacity 0.1s 0.22s linear; 
+}
+
+.hamburger--collapse.is-active .hamburger-inner::before {
+	top: 0;
+	transform: rotate(-120deg);
+	transition: top 0.1s 0.16s cubic-bezier(0.33333, 0, 0.66667, 0.33333), transform 0.13s 0.25s cubic-bezier(0.215, 0.61, 0.355, 1); 
+}
+
+
+@include media700{
+	#hamburger{
+		top:1rem;
+	}
+}
+
+@include media1200{
+	#hamburger{
 		display: none;
 	}
+}
+/*Signup Modal*/
 
-	.main-navigation ul {
-		display: flex;
+#pb_signup_form form {
+    overflow: auto;
+    height: calc(90vh - var(--header-height));
+	max-width: 600px;
+    margin: 0 auto;
+    padding-right: 15px;
+}
+
+button#close-signup {
+    position: absolute;
+    top: calc(var(--header-height) - 1rem);
+    right: var(--margin);
+}
+
+div#pb_signup_container {
+	filter:drop-shadow(4px 4px 4px rgba(0,0,0,0.2));
+	.newsletter-inner{
+   		padding-right:10%;
+   		z-index:30;
+		background-color: $white;
+		padding: var(--header-height) 5%;
+		height:100%;
+		width:100%;
 	}
 }
 
-.comment-navigation,
-.posts-navigation,
-.post-navigation {
+.modal p {
+    text-align: center;
+}
 
-	.site-main & {
-		margin: 0 0 1.5em;
-	}
+.modal label, .modal input {
+    display: block;
+}
 
-	.nav-links {
-		display: flex;
-	}
-
-	.nav-previous {
-		flex: 1 0 50%;
-	}
-
-	.nav-next {
-		text-align: end;
-		flex: 1 0 50%;
-	}
+.modal input {
+    width: 100%;
 }
