--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,15 @@
 /*!
-Theme Name: AAA
+Theme Name: Confetti
 Theme URI: http://underscores.me/
 Author: Chad Rossouw for HdK
 Author URI: https://wearehdk.com/
-Description: Description
+Description: A theme for Studio 3 Arts
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: aaa
+Text Domain: confetti
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
