--- a/sass/base/elements/_base.scss
+++ b/sass/base/elements/_base.scss
@@ -58,11 +58,15 @@ img {
 
 figure {
 	margin: 1rem 0; // Extra wide images within figure tags don't overflow the content area.
+	img{
+		display:block;
+	}
 }
 
 figcaption, .caption {
-    margin-left: 1rem;
+	padding: 1rem 0.8rem 0.8rem;
     font-size: .75rem;
+    background-color: #ccc;
 }
 
 /*Lists*/
@@ -190,6 +194,7 @@ input[type="submit"] {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1299 1280' xml:space='preserve'%3E%3Crect x='189' y='173' transform='rotate(-30 649 640)' width='921.2' height='934.8' fill='%23f39100'/%3E%3C/svg%3E");
 		background-repeat: no-repeat;
 		background-size: auto 100%;
+		background-attachment: fixed;
 	}
 }
 
@@ -216,6 +221,7 @@ input[type="submit"] {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1280 1280' xml:space='preserve'%3E%3Ccircle cx='642.5' cy='640.5' r='635.5' fill='%234bbfe8'/%3E%3C/svg%3E");
 		background-repeat: no-repeat;
 		background-size: auto 100%;
+		background-attachment: fixed;
 	}
 }
 
@@ -229,15 +235,32 @@ input[type="submit"] {
 
 .gold{
 	background-color:$gold;
+	&.bg{
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1480 1480' xml:space='preserve'%3E%3Ccircle cx='642.5' cy='640.5' r='635.5' fill='%23FFB501'/%3E%3C/svg%3E");
+		background-size: auto 80%;
+		background-attachment: fixed;
+	}
 }
 
 .purple{
 	background-color:$purple;
-	&.bg::before{
-		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1116 1116' xml:space='preserve' overflow='visible'%3E%3Ccircle cx='557.9' cy='557.9' r='557.9' fill='%23f8b50c'/%3E%3C/svg%3E"),url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 763 595' xml:space='preserve' overflow='visible'%3E%3Crect x='204' y='-41' transform='rotate(-66 381 298)' width='353.9' height='677.7' fill='%23009fe3'/%3E%3C/svg%3E"),url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 662 657' xml:space='preserve' overflow='visible'%3E%3Crect x='-110' y='304' transform='rotate(-45 331 328)' width='882.9' height='50' fill='%23f381be'/%3E%3C/svg%3E");
-		background-size: auto 100%, auto 50%, auto 50%;
-		background-position: 60vw 90px, -50px 190px, -30% 0%;
-		background-repeat: no-repeat;
+	&.bg{
+		position:relative;
+		z-index: 5;
+		&::before{
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: -1;
+			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1116 1116' xml:space='preserve' overflow='visible'%3E%3Ccircle cx='557.9' cy='557.9' r='557.9' fill='%23f8b50c'/%3E%3C/svg%3E"),url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 763 595' xml:space='preserve' overflow='visible'%3E%3Crect x='204' y='-41' transform='rotate(-66 381 298)' width='353.9' height='677.7' fill='%23009fe3'/%3E%3C/svg%3E"),url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 662 657' xml:space='preserve' overflow='visible'%3E%3Crect x='-110' y='304' transform='rotate(-45 331 328)' width='882.9' height='50' fill='%23f381be'/%3E%3C/svg%3E");
+			background-size: auto 100%, auto 50%, auto 50%;
+			background-position: 60vw 90px, -50px 190px, -30% 0%;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+		}
 	}
 }
 
@@ -250,6 +273,12 @@ input[type="submit"] {
 }
 .toothpaste{
 	background-color:$toothpaste;
+	&.bg{
+		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1280 1280' xml:space='preserve'%3E%3Ccircle cx='642.5' cy='640.5' r='635.5' fill='%232FAC66'/%3E%3C/svg%3E");
+		background-repeat: no-repeat;
+		background-size: auto 100%;
+		background-attachment: fixed;
+	}
 }
 
 .wheat{
@@ -346,6 +375,12 @@ input[type="submit"] {
 	}
 	&.blue::before{
 		background-color: $sky;
+	}
+	&.wheat::before{
+		background-color: $wheat;
+	}
+	&.grey::before{
+		background-color: $grey;
 	}
 }
 
