--- a/sass/components/content/_content_blocks.scss
+++ b/sass/components/content/_content_blocks.scss
@@ -19,7 +19,7 @@
 	background-repeat: repeat-y, repeat-y, repeat-y;
 	background-size: 100% auto, 100% auto,100% auto;
 	background-position: 50% 50%;
-	
+	background-attachment: fixed, fixed, scroll;
 } 
 .home #primary{
 	padding-top:0;
@@ -31,26 +31,60 @@
     position: relative;
 	.swiper-button-next, .swiper-button-prev {
 		top: unset;
-		bottom: -3rem;
+		bottom: -5rem;
 		color: white;
 		background-color: black;
 		border-radius: 50%;
-		width: 2.4rem;
-		height: 2.4rem;
+		width: 3rem;
+		height: 3rem;
 		caret-color: transparent;
-		&:after{
-			font-size:1.6rem;
-			font-weight:900;
+		
+		&::after, &::before{
+			content:'';
+			position:absolute;
+			width:1.2rem;
+			height:.4rem;
+			background-color:black;
+			left:50%;
+			top:48%;
 		}
 	}
-	.swiper-button-prev::after{
-		transform:translateX(-20%);
+	.swiper-button-prev{
+		&::after{
+			transform:translate(-30%,-40%) rotate(45deg);
+			transform-origin: left top;
+		}
+		&::before{
+			transform:translate(-30%,-20%) rotate(-45deg);
+			transform-origin: left bottom;
+		}
 	}
-	.swiper-button-next::after{
-		transform:translateX(20%);
+	.swiper-button-next{
+		&::after{
+			transform:translate(-60%,-40%) rotate(-45deg);
+			transform-origin: right top;
+		}
+		&::before{
+			transform:translate(-60%,-20%) rotate(45deg);
+			transform-origin: right bottom;
+		}
 	}
 	.swiper-wrapper {
 		margin-bottom: 3rem;
+	}
+}
+
+.whatson_block .carousel{
+	.swiper-nav{
+		&::before, &::after{
+			background-color: $yellow;
+		}
+		&:hover{
+			filter:none;
+			&::before, &::after{
+				background-color: $gold;
+			}
+		}
 	}
 }
 
@@ -77,9 +111,10 @@
 		color: $white;
 		padding: .2rem .5rem .4rem;
 		text-transform:uppercase;
-		background-color:$magenta;
 		display: inline-block;
 		margin: 0 0 0.5rem 0;
+		display:block;
+		width:max-content;
 	}
 
 	.swiper-pagination-bullet {
@@ -133,11 +168,11 @@
 		}
 		
 		.swiper-button-next {
-			right: -3rem;
+			right: -4rem;
 		}
 		
 		.swiper-button-prev {
-			left: -3rem;
+			left: -4rem;
 		}
 	}
 }
@@ -148,19 +183,25 @@
 			padding-top: 42.85%;
 		}
 		h2{
-			font-size:3rem;
-			padding:.2rem 2rem .5rem;
+			font-size:2.4rem;
+			padding:.2rem 1.4rem .3rem;
 			line-height:150%;
 			margin-bottom:1.2rem;
 		}
 		.slider-text{
-			max-width:45em;
-			bottom:6rem;
+			max-width:50em;
+			bottom:2rem;
 		}
 	}
 }
 /*Home Blocks*/
-
+.block.slide-in{
+	transform: translate3d(0,100px,0);
+	transition: transform calc(2 * var(--transition)) ease-in;
+	&.slide-active{
+		transform: translate3d(0,0,0);
+	}
+}
 .image_text_block{
 	
 	.block_images {
@@ -176,8 +217,7 @@
 		h2 {
 			color: white;
 			text-align: center;
-			background-color: $green;
-			padding: 0.4rem 1rem;
+			padding: 0.6rem 1rem;
 			display: inline-block;
 			margin: 0 auto 1em;
 			text-transform: uppercase;
@@ -199,6 +239,9 @@
 		.block_images--large{
 			&:nth-child(1){
 				@include add_poly(38% 0, 100% 7%, 94% 100%, 0 84%, 0 7%);
+				transform: translate3d(0, -80%,0);
+				opacity:0;
+				transition:transform calc(var(--transition) * 2) ease-in, opacity var(--transition) ease-out var(--transition);
 			}
 			&:nth-child(2) {
 				@include add_poly(33% 0, 100% 7%, 100% 100%, 3% 100%, 0 0);
@@ -207,8 +250,10 @@
 				left:50%;
 				height:50%;
 				width:auto;
-				transform:rotate(-3deg) translateX(-50%);
+				transform: translate3d(-50%, 80%,0) rotate(-3deg);
 				transform-origin: top left;
+				opacity:0;
+				transition:transform calc(var(--transition) * 2) ease-in, opacity var(--transition) ease-out var(--transition);
 			}
 		}
 	}
@@ -219,9 +264,29 @@
 				color:$body;
 			}
 		}
+		&.bg.purple{
+			color:$white;
+			&::before{
+				background-size: auto 40%, auto 20%, auto 30%;
+				background-position: 84vw 90px, 70% 522px, 82% 57%;
+			}
+		}
 	}
+	
 }
 
+.triggered {
+	&.image_text_block.wild {
+		.block_images--large:nth-child(1){
+			opacity:1;
+			transform: translate3d(0, 0, 0);
+		}
+		.block_images--large:nth-child(2){
+			opacity:1;
+			transform: translate3d(-50%, 0%,0) rotate(-3deg)
+		}
+	}
+}
 
 .text_container {
 	padding: 1rem;
@@ -261,6 +326,12 @@
 }
 
 @include media1200{
+	.image_text_block.wild{
+		padding-top:2rem;
+		.block_images{
+			margin: 1rem 0 2rem;
+		}
+	}
 	.image_text_block.wild .block_images--large:nth-child(2){
 		height:auto;
 		img{
@@ -294,7 +365,9 @@
 }
 
 .whatson_block{
-
+	a{
+		text-decoration: none;
+	}
 	h1{
 		text-align: center;
 	}
@@ -308,7 +381,13 @@
 
 	h4{
 		color:$magenta;
+		margin-bottom: .5rem;
 	}
+
+	p.subtitle {
+		margin-bottom: 0.5rem;
+	}
+
 	.whatson_block_item{
 		.decorative {
 			position: absolute;
@@ -365,8 +444,16 @@
 
 @include media1200{
 	.whatson_block{
+		a:hover{
+			h4{
+				color:$green;
+			}
+		}
 		h4 {
-			font-size: 2.4rem;
+			font-size: 1.4rem;
+			font-weight:700;
+			margin-bottom:.5rem;
+			transition:color var(--transition) ease;
 		}
 		.right_slash .image_container {
 			clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
@@ -454,7 +541,7 @@
 }
 
 @include media700{
-	.blog_block .white {
+	.blog_block .grey {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-between;
@@ -474,11 +561,19 @@
 			padding-bottom: 2rem;
 		}
 
-		.white {
+		.grey {
 			flex-direction: column;
 			&> * {
 				flex-basis: auto;
 			}
+		}
+	}
+	.single_blog_post .blog_item_featured {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		.image_bottom_slash {
+			height:100%;
+			clip-path: polygon(0 0, 97% 0, 100% 100%, 0 100%);
 		}
 	}
 }
@@ -503,7 +598,7 @@
 			color:$body;
 		}
 	}
-	&.white {
+	&.grey {
 		background-color: transparent;
 		position: relative;
 		z-index: 1;
@@ -514,7 +609,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background-color: $white;
+			background-color: $grey;
 			z-index: -1;
 			transition: background-color var(--transition) ease-in, transform var(--transition) linear;
 		}
@@ -522,6 +617,11 @@
 		&:hover::before {
 			background-color: $yellow;
 			transform: rotate(5deg);
+		}
+	}
+	&:nth-child(2){
+		&.grey:hover::before{
+			transform: rotate(-5deg);
 		}
 	}
 }
@@ -556,10 +656,20 @@
 	}
 }
 .media_block_inner {
-	@include add_poly(0 2%, 85% 0, 100% 6%, 100% 98%, 63% 100%, 0 95%);
+	@include add_poly(0 2%, 85% 0, 100% 6%, 100% 98%, 63% 100%, 0 99%);
     padding: 1rem;
+	color: white;
+    h2 {
+		text-align: center;
+		margin-top:1rem;
+	}
 }
-
+.violet .swiper-nav{
+	bottom:-3rem;
+	&::before, &::after{
+		background-color: $violet;
+	}
+}
 .media_container{
 	@include proportional-container(56.25%);
 	iframe{
@@ -575,6 +685,17 @@
 	}
 }
 
+@include media1000{
+	.violet .swiper-nav{
+		&.swiper-button-prev{
+			left:0;
+		}
+		&.swiper-button-next{
+			right:0;
+		}
+	}
+}
+
 @include media1200{
 	.media_block_inner.violet {
 		max-width: 1200px;
@@ -584,6 +705,10 @@
 /*Footer*/
 .site-footer {
     padding: 15% var(--margin) 1rem;
+	margin-top:-15%;
+}
+.block:last-of-type {
+    padding-bottom: 15%;
 }
 
 .footer_row{
@@ -619,6 +744,9 @@
 	
 	ul.menu a {
 		font-weight: 700;
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 }
 .flex_202060>*:nth-child(1), .flex_202060>*:nth-child(2) {
@@ -657,8 +785,12 @@ address p:empty {
 @include media700{
 	.site-footer {
 		padding-top: 4rem;
+		margin-top: -4rem;
 	}
-
+	.block:last-of-type {
+		padding-bottom: 4rem;
+	}
+	
 	.footer_row {
 		margin-bottom: 2rem;
 		&:first-of-type {
@@ -975,11 +1107,12 @@ button.filter {
 	}
 	h3{
 		color:$body;
+		font-weight:400;
 	}
 }
 
 .breadcrumbs {
-    border-bottom: 1px solid $body;
+    border-bottom: 1px solid #707070;
     padding-bottom: .5rem;
 	font-size:.75rem;
 	a {
@@ -1004,7 +1137,7 @@ button.filter {
 	}
 	a {
 		display: block;
-		margin-bottom: 0.5rem;
+		margin-bottom: 0.8rem;
 		color:$body;
 		text-decoration: none;
 	}
@@ -1120,6 +1253,9 @@ button.filter {
 	.whatson_block_item .decorative{
 		color:$white;
 	}
+	h2 {
+		text-align: center;
+	}
 }
 
 .content_contact{
@@ -1224,6 +1360,10 @@ button.filter {
 		gap: 1rem;
 	}
 	
+	.breadcrumbs{
+		width: calc((100% - 2 * var(--margin)) * 0.66);
+	}
+
 	.content figure, .content .content img {
 		width: 100%!important;
 	}
@@ -1279,8 +1419,8 @@ button.filter {
 			padding-top: 42.85%;
 		}
 		h1 {
-			font-size: 3rem;
-			padding: 3rem 5rem;
+			font-size: 2.4rem;
+			padding: 2.4rem 4rem;
 		}
 	} 
 	
@@ -1314,8 +1454,13 @@ button.filter {
 	
 }
 
+@include media1800{
+	.content_blocks .carousel {
+		max-width: 1200px;
+	}
+}
 /*Blog Page*/
-.nav-links {
+.nav-links, .pagination {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1370,6 +1515,9 @@ button.filter {
 		z-index:-1;
 		@include add_poly(0 0, 100% 0, 100% 100%, 0 71%);
 	}
+	&.gold::after{
+		background-color:$gold;
+	}
 }
 
 
@@ -1407,7 +1555,17 @@ blockquote {
 }
 
 .post-thumbnail {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+	img{
+		display:block;
+	}
+	&.circle{
+		@include proportional-container(100%);
+		img{
+			border-radius:50%;
+			@include proportional-image;
+		}
+	}
 }
 @include media700{
 	.blog_response h2 {
@@ -1433,6 +1591,7 @@ blockquote {
 		margin: 2rem;
 		padding: 2rem;
 		min-height: 300px;
+		height: fit-content;
 	}
 
 	.post-header h1 {
@@ -1443,4 +1602,106 @@ blockquote {
 		height: 100%;
 		object-fit: cover;
 	}
+}
+/*Case Studies*/
+article:last-child {
+    margin-bottom: 4rem;
+}
+
+.content_gallery~.other-case-studies {
+    margin-top: -1rem;
+}
+
+.other-case-studies .event {
+	h3 {
+    	color: $body;
+	}
+	.decorative{
+		text-align: left;
+		margin-bottom:1rem;
+		margin-left: 2rem;
+	}
+}
+@include media700{
+	.other-case-studies {
+		grid-template-columns: 1fr 1fr;
+		gap: 1rem;
+		padding-bottom: 5rem;
+		h2,&>.decorative {
+			grid-column: 1/3;
+			text-align: center;
+		}
+	}
+}
+
+@include media1200{
+	.other-case-studies{
+		gap:2rem;
+	}
+}
+
+
+.header-circle {
+    position: absolute;
+    height: 0;
+    padding-top: 300px;
+    grid-column: 2/3;
+    border-radius: 50%;
+    width: 300px;
+    top: calc(50% + var(--header-height));
+    left: 50%;
+    transform: translate(-50%,-65%);
+	h1 {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin: 0;
+		padding: 1rem;
+	}
+}
+
+.image_bg {
+    height: 15rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.case-studies-response {
+    grid-gap: 2rem;
+}
+
+@include media1000{
+	.header-circle{
+		width:600px;
+		padding-top: 600px;
+	}
+	.image_bg{
+		height:25rem;
+	}
+	.case-studies-response{
+		grid-template-columns:1fr 1fr;
+	}
+	.case-study{
+		&:nth-of-type(3n - 2){
+			grid-column: 1/-1;
+			display:grid;
+			grid-template-columns: 1fr 1fr;
+			gap:2rem;
+			.image_container{
+				height:100%;
+			}
+		}
+		.text_container{
+			padding:2rem;
+		}
+	}
+}
+
+.pagination{
+	grid-column:1/-1;
 }
